--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,21 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/springrest
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 server.servlet.context-path=/springangular
+
+
+spring.datasource.url= jdbc:mysql://localhost:3306/springrest
+
+
+#número máximo de millissegundos que cliente aguardará por uma conexão
+spring.datasource.hikari.connection-timeout= 20000
+#Número mínimo de conexões inativas mantidas pelo hikariCP em um conjunto de conexões
+spring.datasource.hikari.minimum-idle=10
+#Máximo do pool, máximo de conexões que ele pode abrir
+spring.datasource.hikari.maximum-pool-size= 40
+#Tempo ocioso para conexão
+spring.datasource.hikari.idle-timeout=10000
+#Salvando os dados automaticamente
+spring.datasource.hikari.auto-commit= true
